--- a/cfg/config_production.json
+++ b/cfg/config_production.json
@@ -46,7 +46,9 @@
   "events": {
     "kafka": {
       "kafka": {
-        "brokers": ["kafka:9092"]
+        "brokers": [
+          "kafka:9092"
+        ]
       }
     }
   },
@@ -62,20 +64,10 @@
   },
   "client": {
     "acs-srv": {
-      "publisher": {
-        "name": "static",
-        "instances": [
-          "grpc://access-control-srv:50051"
-        ]
-      }
+      "address": "access-control-srv:50051"
     },
     "user": {
-      "publisher": {
-        "name": "static",
-        "instances": [
-          "grpc://identity-srv:50051"
-        ]
-      }
+      "address": "identity-srv:50051"
     }
   }
 }
