--- a/package.json
+++ b/package.json
@@ -17,47 +17,47 @@
     "service"
   ],
   "dependencies": {
-    "@restorecommerce/acs-client": "0.3.1",
-    "@restorecommerce/chassis-srv": "^0.2.3",
-    "@restorecommerce/cluster-service": "^0.1.6",
-    "@restorecommerce/grpc-client": "^0.0.9",
-    "@restorecommerce/kafka-client": "^0.2.8",
-    "@restorecommerce/logger": "^0.8.0",
-    "@restorecommerce/protos": "^0.0.22",
-    "@restorecommerce/resource-base-interface": "^0.1.1",
-    "@restorecommerce/service-config": "^0.4.5",
+    "@restorecommerce/acs-client": "^0.4.3",
+    "@restorecommerce/chassis-srv": "^0.3.1",
+    "@restorecommerce/cluster-service": "^0.1.9",
+    "@restorecommerce/grpc-client": "^0.2.6",
+    "@restorecommerce/kafka-client": "^0.2.17",
+    "@restorecommerce/logger": "^0.10.4",
+    "@restorecommerce/protos": "^0.4.3",
+    "@restorecommerce/resource-base-interface": "^0.2.0",
+    "@restorecommerce/service-config": "^0.4.14",
     "apollo-boost": "^0.4.9",
     "cross-fetch": "^3.1.4",
     "graphql": "^15.4.0",
-    "graphql-tag": "^2.12.4",
+    "graphql-tag": "^2.12.5",
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.20",
     "node-eval": "^2.0.0",
     "traverse": "^0.6.6"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.170",
-    "@types/mocha": "^8.2.2",
+    "@types/lodash": "^4.14.172",
+    "@types/mocha": "^9.0.0",
     "@types/nock": "^11.1.0",
-    "@types/node": "^14.14.35",
-    "@typescript-eslint/eslint-plugin": "^4.26.1",
-    "@typescript-eslint/eslint-plugin-tslint": "^4.26.1",
-    "@typescript-eslint/parser": "^4.26.1",
+    "@types/node": "^16.4.13",
+    "@typescript-eslint/eslint-plugin": "^4.29.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^4.29.0",
+    "@typescript-eslint/parser": "^4.29.0",
     "coveralls": "^3.1.0",
     "cross-env": "^7.0.2",
-    "eslint": "^7.28.0",
+    "eslint": "^7.32.0",
     "eslint-plugin-prefer-arrow-functions": "^3.0.1",
     "grpc-mock": "^0.7.0",
-    "mocha": "^9.0.0",
-    "nock": "^13.1.0",
+    "mocha": "^9.0.3",
+    "nock": "^13.1.1",
     "nodemon": "^2.0.6",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
     "should": "^13.2.3",
-    "ts-node": "^10.0.0",
+    "ts-node": "^10.2.0",
     "tslint": "^6.1.3",
-    "typescript": "^4.3.2"
+    "typescript": "^4.3.5"
   },
   "scripts": {
     "start": "npm run createtopics && node lib/start.js",
@@ -73,8 +73,7 @@
     "tsctests": "tsc -d -p tsconfig.test.json",
     "build:tsc": "tsc -d",
     "build:clean": "rimraf lib",
-    "build": "npm-run-all lint build:clean build:tsc",
-    "healthcheck": "node lib/healthcheck.js"
+    "build": "npm-run-all lint build:clean build:tsc"
   },
   "engines": {
     "node": ">= 16.0.0"
