--- a/package.json
+++ b/package.json
@@ -62,13 +62,13 @@
   "scripts": {
     "start": "npm run createtopics && node lib/start.js",
     "dev": "cross-env NODE_ENV=development nodemon --watch './src/**/*.ts' --exec 'ts-node' src/start.ts",
-    "test": "npm run createtopics && npm run build && npm run lint && cross-env NODE_ENV=test nyc npm run mocha",
+    "test": "npm run build && npm run lint && nyc npm run mocha",
     "lint": "eslint src --ext .ts",
     "mocha": "cross-env NODE_ENV=test mocha --full-trace --exit --timeout 120000",
     "mocha-debug": "mocha -R spec test/*_test.js --inspect-brk",
     "test-core": "cross-env NODE_ENV=test npm run lint && npm run mocha-core",
     "lcov-report": "nyc report --reporter=lcov",
-    "coveralls": "cross-env NODE_ENV=test; nyc --reporter text --reporter lcov npm test",
+    "coveralls": "nyc report --reporter=text-lcov | coveralls",
     "createtopics": "node setupTopics.js io.restorecommerce.command",
     "tsctests": "tsc -d -p tsconfig.test.json",
     "build:tsc": "tsc -d",
