made the global policy set CA as deny overrides, and added a test case for isAllowed with 2 entities - one permit (location resource policy rule) and one deny (organization resource policy rule), so the over all response is Deny.

--- a/test/fixtures/roleScopes.yml
+++ b/test/fixtures/roleScopes.yml
@@ -2,7 +2,7 @@
   - id: policySetA
     name: Policy set A
     description: A policy set
-    combining_algorithm: urn:oasis:names:tc:xacml:3.0:rule-combining-algorithm:permit-overrides
+    combining_algorithm: urn:oasis:names:tc:xacml:3.0:rule-combining-algorithm:deny-overrides
     policies:
       - id: policyA
         name: Policy A
