--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "typescript": "^4.5.2"
   },
   "scripts": {
-    "start": "npm run createtopics && node lib/start.js",
+    "start": "node lib/start.js",
     "dev": "cross-env NODE_ENV=development nodemon --watch './src/**/*.ts' --exec 'ts-node' src/start.ts",
     "test": "npm run build && npm run lint && nyc npm run mocha",
     "lint": "eslint src --ext .ts",
@@ -69,7 +69,6 @@
     "test-core": "cross-env NODE_ENV=test npm run lint && npm run mocha-core",
     "lcov-report": "nyc report --reporter=lcov",
     "coveralls": "nyc report --reporter=text-lcov | coveralls",
-    "createtopics": "node setupTopics.js io.restorecommerce.command",
     "tsctests": "tsc -d -p tsconfig.test.json",
     "build:tsc": "tsc -d",
     "build:clean": "rimraf lib",
