--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,19 @@
 {
   "compilerOptions": {
-    "target": "es6",
+    "target": "ES2021",
     "module": "commonjs",
     "moduleResolution": "node",
+    "declaration": true,
+    // "strict": true,
+    "downlevelIteration": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
-    "alwaysStrict": true,
+    "noUnusedLocals": false,
+    "importHelpers": true,
     "skipLibCheck": true,
+    "esModuleInterop": true,
+    "sourceMap": true,
     "outDir": "lib",
     "typeRoots": [
       "node_modules/@types"
@@ -18,7 +24,7 @@
     ]
   },
   "include": [
-    "src/**/*.ts"
+    "./src/**/*.ts"
   ],
   "exclude": [
     "node_modules",
