chore: up deps and migrated from ioredis to redis

--- a/cfg/config.json
+++ b/cfg/config.json
@@ -191,6 +191,7 @@
           "localhost:29092"
         ]
       },
+      "latestOffset": false,
       "healthCheckCommand": {
         "protos": [
           "io/restorecommerce/commandinterface.proto"
