--- a/cfg/config.json
+++ b/cfg/config.json
@@ -3,8 +3,7 @@
   "protosServicePrefix": "io.restorecommerce.",
   "protosRoot": "node_modules/@restorecommerce/protos/",
   "redis": {
-    "host": "localhost",
-    "port": 6379,
+    "url": "redis://localhost:6379",
     "offsetStoreInterval": 1000,
     "db-indexes": {
       "db-offsetStore": 0,
@@ -398,8 +397,7 @@
       "maskedProperty": "urn:restorecommerce:acs:names:obligation:maskedProperty"
     },
     "cache": {
-      "host": "localhost",
-      "port": 6379,
+      "url": "redis://localhost:6379",
       "db-index": 5,
       "ttl": 3600,
       "prefix": "acs:"
