--- a/cfg/config_production.json
+++ b/cfg/config_production.json
@@ -10,11 +10,11 @@
     }
   },
   "redis": {
-    "host": "redis"
+    "url": "redis://redis:6379"
   },
   "authorization": {
     "cache": {
-      "host": "redis"
+      "url": "redis://redis:6379"
     }
   },
   "server": {
