--- a/package.json
+++ b/package.json
@@ -17,47 +17,50 @@
     "service"
   ],
   "dependencies": {
-    "@restorecommerce/acs-client": "^0.6.21",
-    "@restorecommerce/chassis-srv": "^0.3.8",
-    "@restorecommerce/cluster-service": "^0.1.11",
-    "@restorecommerce/grpc-client": "^0.3.1",
-    "@restorecommerce/kafka-client": "^0.3.1",
-    "@restorecommerce/logger": "^0.12.1",
-    "@restorecommerce/protos": "^0.6.3",
-    "@restorecommerce/resource-base-interface": "^0.2.7",
-    "@restorecommerce/service-config": "^0.4.25",
+    "@restorecommerce/acs-client": "^0.6.30",
+    "@restorecommerce/chassis-srv": "^0.3.10",
+    "@restorecommerce/cluster-service": "^0.1.12",
+    "@restorecommerce/grpc-client": "^0.4.0",
+    "@restorecommerce/kafka-client": "^0.4.0",
+    "@restorecommerce/logger": "^0.12.2",
+    "@restorecommerce/protos": "^0.6.9",
+    "@restorecommerce/resource-base-interface": "^0.2.12",
+    "@restorecommerce/service-config": "^0.4.26",
     "apollo-boost": "^0.4.9",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link-http": "^1.5.17",
     "cross-fetch": "^3.1.5",
     "graphql": "^15.5.3",
     "graphql-tag": "^2.12.6",
     "js-yaml": "^4.1.0",
-    "lodash": "^4.17.20",
+    "lodash": "^4.17.21",
     "node-eval": "^2.0.0",
     "traverse": "^0.6.6"
   },
   "devDependencies": {
-    "@types/lodash": "^4.14.178",
-    "@types/mocha": "^9.1.0",
+    "@types/lodash": "^4.14.182",
+    "@types/mocha": "^9.1.1",
     "@types/nock": "^11.1.0",
-    "@types/node": "^17.0.17",
-    "@typescript-eslint/eslint-plugin": "^5.11.0",
-    "@typescript-eslint/eslint-plugin-tslint": "^5.11.0",
-    "@typescript-eslint/parser": "^5.11.0",
-    "coveralls": "^3.1.0",
-    "cross-env": "^7.0.2",
-    "eslint": "^8.9.0",
+    "@types/node": "^17.0.36",
+    "@typescript-eslint/eslint-plugin": "^5.26.0",
+    "@typescript-eslint/eslint-plugin-tslint": "^5.26.0",
+    "@typescript-eslint/parser": "^5.26.0",
+    "coveralls": "^3.1.1",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.16.0",
     "eslint-plugin-prefer-arrow-functions": "^3.1.4",
     "grpc-mock": "^0.7.0",
-    "mocha": "^9.2.0",
+    "mocha": "^10.0.0",
     "nock": "^13.2.4",
-    "nodemon": "^2.0.15",
+    "nodemon": "^2.0.16",
     "npm-run-all": "^4.1.5",
     "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
     "should": "^13.2.3",
-    "ts-node": "^10.5.0",
+    "ts-node": "^10.8.0",
     "tslint": "^6.1.3",
-    "typescript": "^4.5.5"
+    "typescript": "^4.7.2"
   },
   "scripts": {
     "start": "node lib/start.js",
