--- a/cfg/config.json
+++ b/cfg/config.json
@@ -14,6 +14,19 @@
       "level": "fatal",
       "colorize": true,
       "prettyPrint": true
+    },
+    "fieldOptions": {
+      "bufferFields": [
+        {
+          "fieldPath": "context"
+        },
+        {
+          "fieldPath": "request.context.subject"
+        },
+        {
+          "fieldPath": "request.context.resources"
+        }
+      ]
     }
   },
   "server": {
